# znpg

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
znpg/: __init__.py  database.py  exceptions.py  query_builder.py
znpg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
