[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "znpg"
version = "1.0.0"
authors = [
    {name = "Zain", email = "thezn0x.exe@gmail.com"}
]
description = "A lightweight PostgreSQL wrapper for Python with connection pooling"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/thezn0x/znpg"
"Repository" = "https://github.com/thezn0x/znpg"
"Bug Tracker" = "https://github.com/thezn0x/znpg/issues"
"Icon" = "https://raw.githubusercontent.com/thezn0x/znpg/main/logo.png"

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
